fix(gtk): fix alignment issues with nautilus sidebar

--- a/gtk-4.0/gtk-dark.css
+++ b/gtk-4.0/gtk-dark.css
@@ -4146,12 +4146,8 @@ placessidebar {
       border-radius: 0; }
       placessidebar row.sidebar-row label {
         color: #C3C7D1;
-        padding-left: 8px; }
-      placessidebar row.sidebar-row.sidebar-row .sidebar-icon {
-        margin-left: -14px;
-        margin-right: 12px;
-        padding-left: 14px;
-        padding-right: 12px;
+        padding-left: 30px; }
+      placessidebar row.sidebar-row.sidebar-row .sidebarrow-icon {
         color: #9ecfa2; }
       placessidebar row.sidebar-row:hover {
         transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
