--- a/gtk-4.0/widgets/_sidebar.scss
+++ b/gtk-4.0/widgets/_sidebar.scss
@@ -131,17 +131,11 @@ placessidebar {
 
         label { 
           color: $fg_color; 
-          padding-left: 8px;
+          padding-left: 30px;
         }
-				&.sidebar-row{
-					.sidebar-icon {
-						margin-left:-14px;
-						margin-right: 12px;
-						padding-left: 14px;
-						padding-right: 12px;
-						color: #9ecfa2;
-					}
-				}
+        
+				&.sidebar-row .sidebarrow-icon { color: #9ecfa2; }
+				
 				&:hover{
 					transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 					color: rgba(0,0,0,0.76);
